proj1/tests/backup-test/correct/triple_quote_string.py
"""
    This is a triple quote string
"""
