proj1/tests/backup-test/error/triple_quote_string.py
"""
    This string is badly formed

